# IPSB_Forum

./: README.md
Backend/: Cargo.toml
Backend/src/: main.rs  prelude.rs
Backend/src/api/: routes.rs
Backend/src/api/handlers/: mod.rs  post_handler.rs  user_handler.rs
Backend/src/models/: mod.rs  post_model.rs  reply_model.rs  user_model.rs
Backend/src/services/: user_service.rs
Backend/src/utils/: config.rs  error.rs  logger.rs  mod.rs
