[package]
name = "ipsb_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.4", features = ["chrono", "postgres", "runtime-tokio"] }
time = "0.3.41"
time-macros = { version = "0.2.0-alpha.1" }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono", "time"] }
